Replaced `Stream.collect(Collectors.toList())` with `Stream.toList()` (Sonar) (#1018)
Co-authored-by: pixeebot[bot] <104101892+pixeebot[bot]@users.noreply.github.com>